"""
Digital Signature Request — tracks the full lifecycle of a signature request.

  DRAFT → PENDING_SIGNATURE → SIGNED | DECLINED | EXPIRED | CANCELED

Israeli legal context:
  The Electronic Signature Law (5761-2001) recognises digital signatures
  as legally binding when coupled with an audit trail that proves:
    - Who was asked to sign (identity)
    - When they were asked (timestamp)
    - What they approved (content hash)
    - How they confirmed (action timestamp + IP)

Design decisions:
- client_id is the PRIMARY anchor (legal entity). Always required.
- business_id is OPTIONAL context — set when the signature is scoped
  to a specific business activity.
- signing_token is a one-time URL-safe token; cleared (NULL) after
  signing / declining / canceling / expiring.
- content_hash (SHA-256) enables tamper detection of the signed content.
- signed_document_key stores the countersigned PDF in S3/R2.
- canceled_by: who canceled (advisor/system) — separate from deleted_by.
- SignatureAuditEvent is append-only — no soft delete, no updated_at.
- event_type and actor_type are String (not enum) — expand freely without migrations.
"""

from __future__ import annotations

import datetime
from enum import Enum as PyEnum
from typing import Optional

from sqlalchemy import ForeignKey, Index, Integer, String, Text
from sqlalchemy.orm import Mapped, mapped_column, relationship

from app.database import Base
from app.utils.enum_utils import pg_enum
from app.utils.time_utils import utcnow


class SignatureRequestStatus(str, PyEnum):
    DRAFT             = "draft"
    PENDING_SIGNATURE = "pending_signature"
    SIGNED            = "signed"
    DECLINED          = "declined"
    EXPIRED           = "expired"
    CANCELED          = "canceled"


class SignatureRequestType(str, PyEnum):
    ENGAGEMENT_AGREEMENT   = "engagement_agreement"    # הסכם התקשרות
    ANNUAL_REPORT_APPROVAL = "annual_report_approval"  # אישור דוח שנתי
    POWER_OF_ATTORNEY      = "power_of_attorney"       # ייפוי כוח
    VAT_RETURN_APPROVAL    = "vat_return_approval"     # אישור דוח מע"מ
    CUSTOM                 = "custom"                  # חתימה כללית


class SignatureRequest(Base):
    __tablename__ = "signature_requests"

    id: Mapped[int] = mapped_column(primary_key=True, autoincrement=True)

    # ── Anchors ───────────────────────────────────────────────────────────────
    # PRIMARY: always required — the legal entity is the signer
    client_id: Mapped[int] = mapped_column(
        ForeignKey("clients.id"), nullable=False, index=True
    )
    # OPTIONAL: set when the request is scoped to a specific business activity
    business_id: Mapped[Optional[int]] = mapped_column(
        ForeignKey("businesses.id"), nullable=True, index=True
    )

    created_by: Mapped[int] = mapped_column(ForeignKey("users.id"), nullable=False)

    # ── Cross-domain links ────────────────────────────────────────────────────
    annual_report_id: Mapped[Optional[int]] = mapped_column(
        ForeignKey("annual_reports.id"), nullable=True, index=True
    )
    document_id: Mapped[Optional[int]] = mapped_column(
        ForeignKey("permanent_documents.id"), nullable=True
    )

    # ── Request identity ──────────────────────────────────────────────────────
    request_type: Mapped[SignatureRequestType] = mapped_column(
        pg_enum(SignatureRequestType), nullable=False
    )
    title:        Mapped[str]           = mapped_column(String, nullable=False)
    description:  Mapped[Optional[str]] = mapped_column(Text,   nullable=True)
    content_hash: Mapped[Optional[str]] = mapped_column(String, nullable=True)  # SHA-256
    storage_key:  Mapped[Optional[str]] = mapped_column(String, nullable=True)  # S3/R2 original

    # ── Signer identity ───────────────────────────────────────────────────────
    signer_name:  Mapped[str]           = mapped_column(String, nullable=False)
    signer_email: Mapped[Optional[str]] = mapped_column(String, nullable=True)
    signer_phone: Mapped[Optional[str]] = mapped_column(String, nullable=True)

    # ── Status & token ────────────────────────────────────────────────────────
    status: Mapped[SignatureRequestStatus] = mapped_column(
        pg_enum(SignatureRequestStatus),
        default=SignatureRequestStatus.DRAFT,
        nullable=False,
    )
    # Unique one-time token; cleared after terminal state
    signing_token: Mapped[Optional[str]] = mapped_column(
        String, nullable=True, unique=True
    )

    # ── Lifecycle timestamps ──────────────────────────────────────────────────
    created_at:  Mapped[datetime.datetime]           = mapped_column(default=utcnow, nullable=False)
    sent_at:     Mapped[Optional[datetime.datetime]] = mapped_column(nullable=True)
    expires_at:  Mapped[Optional[datetime.datetime]] = mapped_column(nullable=True)
    expiry_days: Mapped[int]                         = mapped_column(nullable=False, default=14, server_default="14")
    signed_at:   Mapped[Optional[datetime.datetime]] = mapped_column(nullable=True)
    declined_at: Mapped[Optional[datetime.datetime]] = mapped_column(nullable=True)
    canceled_at: Mapped[Optional[datetime.datetime]] = mapped_column(nullable=True)
    canceled_by: Mapped[Optional[int]]               = mapped_column(ForeignKey("users.id"), nullable=True)

    # ── Signer evidence (captured at signing/declining time) ──────────────────
    signer_ip_address:   Mapped[Optional[str]] = mapped_column(String, nullable=True)
    signer_user_agent:   Mapped[Optional[str]] = mapped_column(String, nullable=True)
    decline_reason:      Mapped[Optional[str]] = mapped_column(Text,   nullable=True)
    signed_document_key: Mapped[Optional[str]] = mapped_column(String, nullable=True)  # S3/R2 countersigned PDF

    # ── Soft delete ───────────────────────────────────────────────────────────
    deleted_at: Mapped[Optional[datetime.datetime]] = mapped_column(nullable=True)
    deleted_by: Mapped[Optional[int]]               = mapped_column(ForeignKey("users.id"), nullable=True)

    # ── Relationships ─────────────────────────────────────────────────────────
    client        = relationship("Client",       foreign_keys="[SignatureRequest.client_id]",       viewonly=True)
    annual_report = relationship("AnnualReport", foreign_keys="[SignatureRequest.annual_report_id]", viewonly=True)
    audit_events  = relationship("SignatureAuditEvent", back_populates="signature_request")

    __table_args__ = (
        Index("idx_sig_request_client",        "client_id"),
        Index("idx_sig_request_business",      "business_id"),
        Index("idx_sig_request_annual_report", "annual_report_id"),
        Index("idx_sig_request_status",        "status"),
        Index("idx_sig_request_token",         "signing_token", unique=True),
    )

    def __repr__(self) -> str:
        return (
            f"<SignatureRequest(id={self.id}, client_id={self.client_id}, "
            f"business_id={self.business_id}, type='{self.request_type}', "
            f"status='{self.status}')>"
        )


class SignatureAuditEvent(Base):
    """Append-only audit trail — no soft delete, no updated_at."""
    __tablename__ = "signature_audit_events"

    id: Mapped[int] = mapped_column(primary_key=True, autoincrement=True)
    signature_request_id: Mapped[int] = mapped_column(
        ForeignKey("signature_requests.id"), nullable=False, index=True
    )

    # String (not enum) — expands freely without migrations
    event_type: Mapped[str] = mapped_column(String, nullable=False)  # created, sent, viewed, signed, declined, canceled, expired
    actor_type: Mapped[str] = mapped_column(String, nullable=False)  # advisor, signer, system

    actor_id:   Mapped[Optional[int]] = mapped_column(Integer, nullable=True)
    actor_name: Mapped[Optional[str]] = mapped_column(String,  nullable=True)
    ip_address: Mapped[Optional[str]] = mapped_column(String,  nullable=True)
    user_agent: Mapped[Optional[str]] = mapped_column(String,  nullable=True)
    notes:      Mapped[Optional[str]] = mapped_column(Text,    nullable=True)
    occurred_at: Mapped[datetime.datetime] = mapped_column(nullable=False, default=utcnow)

    # ── Relationships ─────────────────────────────────────────────────────────
    signature_request = relationship("SignatureRequest", back_populates="audit_events")

    __table_args__ = (
        Index("idx_sig_audit_request",  "signature_request_id"),
        Index("idx_sig_audit_occurred", "occurred_at"),
    )

    def __repr__(self) -> str:
        return (
            f"<SignatureAuditEvent(id={self.id}, "
            f"request_id={self.signature_request_id}, "
            f"type='{self.event_type}', actor='{self.actor_type}')>"
        )